fix: fix z-index, age (#88)

--- a/public/assets/css/header.css
+++ b/public/assets/css/header.css
@@ -11,6 +11,7 @@
   align-items: center;
   background-color: var(--main-dark-color);
   color: var(--main-light-color);
+  z-index: 2;
 }
 
 .header-wrapper {
